manifests/07-statefulsets.yaml
# Source: openwhisk/templates/controller-pod.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: owdev-controller
  namespace: openwhisk
  labels:
    name: owdev-controller
    heritage: "Helm"
    release: "owdev"
    chart: "openwhisk-1.0.0"
    app: owdev-openwhisk
spec:
  serviceName: owdev-controller
  podManagementPolicy: "Parallel"
  replicas: 1
  selector:
    matchLabels:
      name: owdev-controller
  template:
    metadata:
      labels:
        name: owdev-controller
        heritage: "Helm"
        release: "owdev"
        chart: "openwhisk-1.0.0"
        app: owdev-openwhisk

    spec:
      serviceAccountName: owdev-core
      restartPolicy: Always

      containers:
      - name: controller
        imagePullPolicy: "IfNotPresent"
        image: "openwhisk/controller:1.0.0"
        securityContext:
          privileged: true
        command: ["/bin/bash", "-c", "/init.sh `hostname | awk -F '-' '{print $NF}'`"]
        ports:
        - name: controller
          containerPort: 8080
        - name: akka-remoting
          containerPort: 2552
        - name: akka-mgmt-http
          containerPort: 19999

        livenessProbe:
          httpGet:
            path: "/ping"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: "/ping"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
