manifests/08-couchdb-deployment.yaml
# Source: openwhisk/templates/couchdb-pod.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#


apiVersion: apps/v1
kind: Deployment
metadata:
  name: owdev-couchdb
  namespace: openwhisk
  labels:
    name: owdev-couchdb
    heritage: "Helm"
    release: "owdev"
    chart: "openwhisk-1.0.0"
    app: owdev-openwhisk
spec:
  replicas: 1
  selector:
    matchLabels:
      name: owdev-couchdb
  template:
    metadata:
      labels:
        name: owdev-couchdb
        heritage: "Helm"
        release: "owdev"
        chart: "openwhisk-1.0.0"
        app: owdev-openwhisk
    spec:
      restartPolicy: Always

      
      containers:
      - name: couchdb
        image: "apache/couchdb:2.3"
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: couchdb
          containerPort: 5984
        volumeMounts:
          - name: database-storage
            mountPath: /opt/couchdb/data
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: owdev-couchdb-pvc
