manifests/10-pods.yaml
# Source: openwhisk/templates/wskadmin-pod.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Pod
metadata:
  name: owdev-wskadmin
  namespace: openwhisk
  labels:
    name: owdev-wskadmin
    heritage: "Helm"
    release: "owdev"
    chart: "openwhisk-1.0.0"
    app: owdev-openwhisk
spec:
  restartPolicy: Always
  
  containers:
  - name: wskadmin
    image: "openwhisk/ow-utils:1.0.0"
    imagePullPolicy: "IfNotPresent"
    command: ["/bin/bash", "-c", "tail -f /dev/null"]
---
# Source: openwhisk/templates/tests/package-checker-pod.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: v1
kind: Pod
metadata:
  name: owdev-tests-package-checker
  namespace: openwhisk
  labels:
    name: owdev-tests-package-checker
    ow-testpod: "true"
    heritage: "Helm"
    release: "owdev"
    chart: "openwhisk-1.0.0"
    app: owdev-openwhisk
  annotations:
    "helm.sh/hook": test-success
spec:
  restartPolicy: Never
  volumes:
  - name: task-dir
    configMap:
      name: owdev-tests-package-checker
  
  containers:
  - name: package-checker
    image: "openwhisk/ow-utils:1.0.0"
    imagePullPolicy: "IfNotPresent"
    command: ["/bin/bash", "/task/myTask.sh"]
    volumeMounts:
    - name: task-dir
      mountPath: "/task/myTask.sh"
      subPath: "myTask.sh"
---
# Source: openwhisk/templates/tests/smoketest-pod.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: v1
kind: Pod
metadata:
  name: owdev-tests-smoketest
  namespace: openwhisk
  labels:
    name: owdev-tests-smoketest
    ow-testpod: "true"
    heritage: "Helm"
    release: "owdev"
    chart: "openwhisk-1.0.0"
    app: owdev-openwhisk
  annotations:
    "helm.sh/hook": test-success
spec:
  restartPolicy: Never
  volumes:
  - name: task-dir
    configMap:
      name: owdev-tests-smoketest
  
  containers:
  - name: smoketest
    image: "openwhisk/ow-utils:1.0.0"
    imagePullPolicy: "IfNotPresent"
    command: ["/bin/bash", "/task/myTask.sh"]
    volumeMounts:
    - name: task-dir
      mountPath: "/task/myTask.sh"
      subPath: "myTask.sh"
