manifests/12-nginx-deployment.yaml
# Source: openwhisk/templates/nginx-pod.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owdev-nginx
  namespace: openwhisk
  labels:
    name: owdev-nginx
    heritage: "Helm"
    release: "owdev"
    chart: "openwhisk-1.0.0"
    app: owdev-openwhisk
spec:
  replicas: 1
  selector:
    matchLabels:
      name: owdev-nginx
  template:
    metadata:
      labels:
        name: owdev-nginx
        heritage: "Helm"
        release: "owdev"
        chart: "openwhisk-1.0.0"
        app: owdev-openwhisk
    spec:
      restartPolicy: Always

      volumes:
      - name: nginx-certs
        secret:
          secretName: owdev-nginx
      - name: nginx-conf
        configMap:
          name: owdev-nginx
      - name: logs
        emptyDir: {}
      
      containers:
      - name: nginx
        image: "nginx:1.19"
        imagePullPolicy: "IfNotPresent"
        ports:
        - name: http
          containerPort: 80
        - name: http-api
          containerPort: 443
        volumeMounts:
        - name: nginx-conf
          mountPath: "/etc/nginx/nginx.conf"
          subPath: "nginx.conf"
        - name: nginx-certs
          mountPath: "/etc/nginx/certs"
        - name: logs
          mountPath: "/logs"
